--- a/package.json
+++ b/package.json
@@ -38,13 +38,17 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "autoprefixer": "^10.4.21",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
+    "jose": "^6.0.10",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.483.0",
+    "mongodb": "^6.15.0",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
