--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
+    "stripe": "^17.7.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.15",
     "tailwindcss-animate": "^1.0.7",
