Add typescript fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "cmdk",
         "Devzer",
         "embla",
-        "sonner"
+        "solidgate",
+        "sonner",
+        "vaul"
     ]
 }
