--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
@@ -64,6 +65,7 @@
     "tailwindcss": "^4.0.15",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.4",
+    "vaul": "^1.1.2",
     "zod": "latest"
   },
   "devDependencies": {
