--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.483.0",
     "mongodb": "^6.15.0",
-    "next": "15.2.3",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
@@ -75,7 +75,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.2.3",
+    "eslint-config-next": "^16.1.1",
     "typescript": "^5"
   }
 }
